# redis-ml-inference-pipeline

./: .gitignore  README.md  pyproject.toml
pipeline/: __init__.py  load_test.py  prepare.py  settings.py
pipeline/cli/: __init__.py  cleanup.py  format.py  generate.py  load_test.py  monitor.py  prepare.py  worker.py
pipeline/data_loader/: __init__.py  data_processor.py  redis_loader.py
pipeline/features/: feature_extractor.py
pipeline/model/: fraud_model.py
pipeline/stats/: manager.py  models.py  reporting.py
pipeline/test/: result_monitor.py
pipeline/utils/: __init__.py  model_utils.py  redis_utils.py  transaction_generator.py
pipeline/worker/: __init__.py  inference_worker.py
